2006-10-21  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js: Add functions to deal with the queue.

	* static/css/site.css: Update the queue class styles.

2006-10-08  Doug Hellmann  <dhellmann@racemi.com>

	* templates/base.html: Add more dojo.require calls.
	Add functions for showing error messages.

2006-10-05  Doug Hellmann  <dhellmann@racemi.com>

	* templates/base.html: Move the status message block to the end of
	the page, as in the 2 column layout.

2006-10-01  Doug Hellmann  <dhellmann@racemi.com>

	* templates/base.html: Add status message display and handling.
	We aren't using the widget package so don't include that.

	* static/css/site.css: Change margins on message class.

	* static/js: Add directory for JavaScript.

	* templates/base.html: Add dojo references.

	* settings.py: Configure logging.

2006-09-30  Doug Hellmann  <dhellmann@racemi.com>

	* static/css/site.css: Remove border from content element.
	Add styles for queue listing classes.

	* templates/three_columns.html: Add a title block so templates
	which override this one can override it.

	* urls.py (urlpatterns): Do not include the project name in
	imports or view names.  Use the generic view for handling logins
	that do not have a "next" value.
