@@ -3,6 +3,9 @@
 
 {% block title %}{% endblock %}
 
+{% block head %}
+{% endblock %}
+
 {% block javascript %}
 {% endblock %}
 
