@@ -6,6 +6,9 @@
     <title>CastSampler - {% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" media="all"
         href="/static/css/site.css" />
+
+{% block head %}
+{% endblock %}
         
    <script type="text/javascript">
           djConfig = { isDebug: true };
