@@ -1,5 +1,7 @@
 2006-10-21  Doug Hellmann  <dhellmann@racemi.com>
 
+	* templates/base.html: Add a head block.
+
 	* static/js/oneoffcast/user.js: Add functions to deal with the queue.
 
 	* static/css/site.css: Update the queue class styles.
